# convex-hull

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  time.txt
documentation/html/: _convex_hull_graphix_8cpp.html  _convex_hull_graphix_8cpp__incl.dot  _convex_hull_graphix_8cpp__incl.md5  _convex_hull_graphix_8h.html  _convex_hull_graphix_8h.js  _convex_hull_graphix_8h__dep__incl.dot  _convex_hull_graphix_8h__dep__incl.md5  _convex_hull_graphix_8h__incl.dot  _convex_hull_graphix_8h__incl.md5  _convex_hull_graphix_8h_source.html  _graham_scan_8cpp.html  _graham_scan_8cpp__incl.dot  _graham_scan_8cpp__incl.md5  _graham_scan_8h.html  _graham_scan_8h__dep__incl.dot  _graham_scan_8h__dep__incl.md5  _graham_scan_8h__incl.dot  _graham_scan_8h__incl.md5  _graham_scan_8h_source.html  _graphix_8cpp.html  _graphix_8cpp__incl.dot  _graphix_8cpp__incl.md5  _graphix_8h.html  _graphix_8h.js  _graphix_8h__dep__incl.dot  _graphix_8h__dep__incl.md5  _graphix_8h__incl.dot  (+148 more)
src/: ChansAlgorithm.cpp  ChansAlgorithm.h  ConvexHullGraphix.cpp  ConvexHullGraphix.h  GrahamScan.cpp  GrahamScan.h  Graphix.cpp  Graphix.h  JarvisMarch.cpp  JarvisMarch.h  KirkpatrickSiedel.cpp  KirkpatrickSiedel.h  main.cpp  median_finding.cpp  median_finding.h  primitives.cpp  primitives.h
testcases/: default_case.txt  default_case1.txt  input0.txt  input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt  inputgen.py
(+175 files in other folders)
